tests/ui/missing_string.rs
#[displaystr::display(docs)]
enum UnitVariant {
    A = "unit variant",
    B,
}

fn main() {}
